WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288619
Fix a crash caused by a stale back/forward index in WebBackForwardList
https://bugs.webkit.org/show_bug.cgi?id=288619
Summary
Fix a crash caused by a stale back/forward index in WebBackForwardList
Charlie Wolfe
Reported
2025-02-26 10:23:46 PST
rdar://145386151
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2025-02-26 10:27:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41423
EWS
Comment 2
2025-02-26 19:52:47 PST
Committed
291195@main
(77bf2dc99068): <
https://commits.webkit.org/291195@main
> Reviewed commits have been landed. Closing PR #41423 and removing active labels.
EWS
Comment 3
2025-02-27 17:50:54 PST
Committed
289651.195@safari-7621-branch
(469fcc7e19de): <
https://commits.webkit.org/289651.195@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2695 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug