Cherry-pick 291195@main (77bf2dc99068). https://bugs.webkit.org/show_bug.cgi?id=288619

Fix a crash caused by a stale back/forward index in WebBackForwardList
    https://bugs.webkit.org/show_bug.cgi?id=288619
    rdar://145386151

    Reviewed by Alex Christensen and Pascoe.

    The changes in 288518@main tried to fix a crash caused by the provisional back/forward index tracked by
    the UI process not being committed, then cleared, resulting in it pointing to a stale index. So, I added
    an IPC message to notify the UI process when the web process commits the provisional history item.
    However, when navigating back to a cached page, the web process does not commit any history item, so the
    provisional index could still remain uncommitted. Instead, this change moves the commit of the
    provisional back/forward index to the DidCommitLoadForFrame message, which should be called when a
    history item is committed or a cached page is restored.

    * Source/WebCore/history/BackForwardClient.h:
    * Source/WebCore/history/BackForwardController.cpp:
    (WebCore::BackForwardController::commitProvisionalItem): Deleted.
    * Source/WebCore/history/BackForwardController.h:
    * Source/WebCore/loader/EmptyClients.cpp:
    * Source/WebCore/loader/HistoryController.cpp:
    (WebCore::HistoryController::updateForCommit):
    (WebCore::HistoryController::recursiveUpdateForCommit):
    (WebCore::HistoryController::recursiveUpdateForSameDocumentNavigation):
    (WebCore::HistoryController::commitProvisionalItem): Deleted.
    * Source/WebCore/loader/HistoryController.h:
    * Source/WebKit/UIProcess/WebBackForwardList.cpp:
    (WebKit::WebBackForwardList::goToItem):
    (WebKit::WebBackForwardList::commitProvisionalItem):
    (WebKit::WebBackForwardList::provisionalItem const):
    * Source/WebKit/UIProcess/WebBackForwardList.h:
    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::didCommitLoadForFrame):
    (WebKit::WebPageProxy::backForwardCommitProvisionalItem): Deleted.
    * Source/WebKit/UIProcess/WebPageProxy.h:
    * Source/WebKit/UIProcess/WebPageProxy.messages.in:
    * Source/WebKit/WebProcess/WebPage/WebBackForwardListProxy.cpp:
    (WebKit::WebBackForwardListProxy::commitProvisionalItem): Deleted.
    * Source/WebKit/WebProcess/WebPage/WebBackForwardListProxy.h:
    * Source/WebKitLegacy/mac/History/BackForwardList.h:
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/DecidePolicyForNavigationAction.mm:
    (TEST(WebKit, DecidePolicyForNavigationActionCancelAfterDiscardingForwardItemsWithPSON)):

    Canonical link: https://commits.webkit.org/291195@main

Canonical link: https://commits.webkit.org/290945.16@webkitglib/2.48